--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -1500,14 +1500,14 @@
                                 <div class="checkbox checkbox-info">
                                     <input id="physicalFlawsFilter" name="phycical" type="checkbox"
                                            ng-model="filter.phycical"
-                                           ng-change="filterFlawsByCategory('физические', filter.phycical)">
+                                           ng-change="filterFlawsByCategory('page.character.flaws_categories.physical', filter.phycical)">
                                     <label for="physicalFlawsFilter" ng-i18next>
                                         page.character.flaws_categories.physical
                                     </label>
                                 </div>
                                 <div class="checkbox checkbox-info">
                                     <input id="mentalFlawsFilter" name="mental" type="checkbox" ng-model="filter.mental"
-                                           ng-change="filterFlawsByCategory('ментальные', filter.mental)">
+                                           ng-change="filterFlawsByCategory('page.character.flaws_categories.mental', filter.mental)">
                                     <label for="mentalFlawsFilter" ng-i18next>
                                         page.character.flaws_categories.mental
                                     </label>
@@ -1516,14 +1516,14 @@
                             <div class="col-md-2">
                                 <div class="checkbox checkbox-info">
                                     <input id="socialFlawsFilter" name="social" type="checkbox" ng-model="filter.social"
-                                           ng-change="filterFlawsByCategory('социальные', filter.social)">
+                                           ng-change="filterFlawsByCategory('page.character.flaws_categories.social', filter.social)">
                                     <label for="socialFlawsFilter" ng-i18next>
                                         page.character.flaws_categories.social
                                     </label>
                                 </div>
                                 <div class="checkbox checkbox-info">
                                     <input id="kodeksFlawsFilter" name="kodeks" type="checkbox" ng-model="filter.kodeks"
-                                           ng-change="filterFlawsByCategory('кодекс чести', filter.kodeks)">
+                                           ng-change="filterFlawsByCategory('page.character.flaws_categories.codex', filter.kodeks)">
                                     <label for="kodeksFlawsFilter" ng-i18next>
                                         page.character.flaws_categories.codex
                                     </label>
@@ -1532,7 +1532,7 @@
                             <div class="col-md-2">
                                 <div class="checkbox checkbox-info">
                                     <input id="faceFlawsFilter" name="face" type="checkbox" ng-model="filter.face"
-                                           ng-change="filterFlawsByCategory('внешность', filter.face)">
+                                           ng-change="filterFlawsByCategory('page.character.flaws_categories.face', filter.face)">
                                     <label for="faceFlawsFilter" ng-i18next>
                                         page.character.flaws_categories.face
                                     </label>
@@ -1541,7 +1541,7 @@
                             <div class="col-md-2">
                                 <div class="checkbox checkbox-info">
                                     <input id="misticFlawsFilter" name="face" type="checkbox" ng-model="filter.mistic"
-                                           ng-change="filterFlawsByCategory('мистические', filter.mistic)">
+                                           ng-change="filterFlawsByCategory('page.character.flaws_categories.mystic', filter.mistic)">
                                     <label for="misticFlawsFilter" ng-i18next>
                                         page.character.flaws_categories.mystic
                                     </label>
@@ -1579,7 +1579,7 @@
                                 <hr/>
                                 <table class="table table-hover category-table"
                                        style="margin-bottom: 0">
-                                    <tr ng-click="filterFlawsByCategory('физические', filter.phycical)">
+                                    <tr ng-click="filterFlawsByCategory('page.character.flaws_categories.physical', filter.phycical)">
                                         <td style="width: 15%;">
                                             <i ng-show="filter.phycical" class="fa fa-check"></i>
                                             <input name="phycical" type="checkbox" ng-model="filter.phycical"
@@ -1589,7 +1589,7 @@
                                             page.character.flaws_categories.physical
                                         </td>
                                     </tr>
-                                    <tr ng-click="filterFlawsByCategory('ментальные', filter.mental)">
+                                    <tr ng-click="filterFlawsByCategory('page.character.flaws_categories.mental', filter.mental)">
                                         <td>
                                             <i ng-show="filter.mental" class="fa fa-check"></i>
                                             <input name="mental" type="checkbox" ng-model="filter.mental"
@@ -1599,7 +1599,7 @@
                                             page.character.flaws_categories.mental
                                         </td>
                                     </tr>
-                                    <tr ng-click="filterFlawsByCategory('социальные', filter.social)">
+                                    <tr ng-click="filterFlawsByCategory('page.character.flaws_categories.social', filter.social)">
                                         <td>
                                             <i ng-show="filter.social" class="fa fa-check"></i>
                                             <input name="social" type="checkbox" ng-model="filter.social"
@@ -1609,7 +1609,7 @@
                                             page.character.flaws_categories.social
                                         </td>
                                     </tr>
-                                    <tr ng-click="filterFlawsByCategory('кодекс чести', filter.kodeks)">
+                                    <tr ng-click="filterFlawsByCategory('page.character.flaws_categories.codex', filter.kodeks)">
                                         <td>
                                             <i ng-show="filter.kodeks" class="fa fa-check"></i>
                                             <input name="kodeks" type="checkbox" ng-model="filter.kodeks"
@@ -1619,7 +1619,7 @@
                                             page.character.flaws_categories.codex
                                         </td>
                                     </tr>
-                                    <tr ng-click="filterFlawsByCategory('Внешность', filter.face)">
+                                    <tr ng-click="filterFlawsByCategory('page.character.flaws_categories.face', filter.face)">
                                         <td>
                                             <i ng-show="filter.face" class="fa fa-check"></i>
                                             <input name="face" type="checkbox" ng-model="filter.face"
@@ -1629,7 +1629,7 @@
                                             page.character.flaws_categories.face
                                         </td>
                                     </tr>
-                                    <tr ng-click="filterFlawsByCategory('мистические', filter.mistic)">
+                                    <tr ng-click="filterFlawsByCategory('page.character.flaws_categories.mystic', filter.mistic)">
                                         <td>
                                             <i ng-show="filter.mistic" class="fa fa-check"></i>
                                             <input name="mistic" type="checkbox" ng-model="filter.mistic"
